--- a/src/app.css
+++ b/src/app.css
@@ -41,3 +41,13 @@
         }
     }
 }
+
+
+.custom-scrollbar::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+  }
+
+  .custom-scrollbar {
+    -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer, Edge */
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
+  }
