--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,17 @@
 
 
 @layer base {
+
+    /* Change scrollbar track color */
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+    
+    /* Change scrollbar thumb color */
+    ::-webkit-scrollbar-thumb {
+        background-color: theme('colors.dark1');
+    }
+
     body {
         font-family: "Inter Display", sans-serif;
         color: theme('colors.dark1')
@@ -131,13 +142,3 @@
         }
     }
 }
-
-
-.custom-scrollbar::-webkit-scrollbar {
-    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
-  }
-
-  .custom-scrollbar {
-    -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer, Edge */
-    scrollbar-width: none; /* Hide scrollbar for Firefox */
-  }
